crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__objects__objects_all_options.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/objects.rs
expression: output
---
export interface Query {
  readonly _empty: string | null;
  readonly user: User | null;
  readonly post: Post | null;
}

export interface User {
  readonly id: string;
  readonly name: string;
  readonly email: string | null;
  readonly age: number | null;
}

export interface Post {
  readonly id: string;
  readonly title: string;
  readonly body: string | null;
  readonly published: boolean;
}
