crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__objects__objects_default.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/objects.rs
expression: output
---
export type Maybe<T> = T | null;

export interface Query {
  __typename: 'Query';
  _empty: Maybe<string>;
  user: Maybe<User>;
  post: Maybe<Post>;
}

export interface User {
  __typename: 'User';
  id: string;
  name: string;
  email: Maybe<string>;
  age: Maybe<number>;
}

export interface Post {
  __typename: 'Post';
  id: string;
  title: string;
  body: Maybe<string>;
  published: boolean;
}
