crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__objects__objects_immutable.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/objects.rs
expression: output
---
export interface Post {
  readonly __typename?: 'Post';
  readonly id: string;
  readonly title: string;
  readonly body?: string | null;
  readonly published: boolean;
}

export interface Query {
  readonly __typename?: 'Query';
  readonly _empty?: string | null;
  readonly user?: User | null;
  readonly post?: Post | null;
}

export interface User {
  readonly __typename?: 'User';
  readonly id: string;
  readonly name: string;
  readonly email?: string | null;
  readonly age?: number | null;
}
