crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__objects__only_operation_types_no_ops.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/objects.rs
expression: output
---
export type Maybe<T> = T | null;
